# learn-audio-video

./: CMakeLists.txt  README.md
demos/: CMakeLists.txt
demos/01_sdl3_play_yuv/: CMakeLists.txt  sdl3_play_yuv.cc
demos/02_sdl3_play_pcm/: CMakeLists.txt  sdl3_play_pcm.cc
demos/03_ffmpeg_memory/: CMakeLists.txt  ffmpeg_memory.cc
demos/04_ffmpeg_decode_video/: CMakeLists.txt  ffmpeg_decode_video.cpp
demos/05_ffmpeg_decode_audio/: CMakeLists.txt  ffmpeg_decode_audio.cpp
demos/06_ffmpeg_audio_resample/: CMakeLists.txt  ffmpeg_audio_resample.cpp
demos/07_ffmpeg_encode_audio/: CMakeLists.txt  ffmpeg_encode_audio.cpp
demos/08_ffmpeg_encode_video/: CMakeLists.txt  ffmpeg_encode_video.cpp
demos/09_ffmpeg_mux_flv/: CMakeLists.txt  ffmpeg_mux_flv.cpp
demos/12_ffplay/: CMakeLists.txt  config.h
